// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get user 1`] = `
Object {
  "data": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": "authenticated",
    "confirmed_at": "2020-09-22T10:28:01.860349Z",
    "created_at": "2020-09-22T10:28:01.8576Z",
    "email": "Mckenna8@hotmail.com",
    "id": "e02d78a9-e9a6-43c9-b707-681be85fa4b7",
    "role": "authenticated",
    "updated_at": "2020-09-22T10:28:01.857605Z",
    "user_metadata": Object {},
  },
  "error": null,
}
`;

exports[`Get user after logging out 1`] = `
Object {
  "data": null,
  "error": "Error: Not logged in.",
}
`;

exports[`Get user after updating 1`] = `
Object {
  "data": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": "authenticated",
    "confirmed_at": "2020-09-22T10:28:01.860349Z",
    "created_at": "2020-09-22T10:28:01.8576Z",
    "email": "Mckenna8@hotmail.com",
    "id": "e02d78a9-e9a6-43c9-b707-681be85fa4b7",
    "role": "authenticated",
    "updated_at": "2020-09-22T10:28:01.857605Z",
    "user_metadata": Object {
      "hello": "world",
    },
  },
  "error": null,
}
`;

exports[`Update user 1`] = `
Object {
  "data": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": "authenticated",
    "confirmed_at": "2020-09-22T10:28:01.860349Z",
    "created_at": "2020-09-22T10:28:01.8576Z",
    "email": "Mckenna8@hotmail.com",
    "id": "e02d78a9-e9a6-43c9-b707-681be85fa4b7",
    "role": "authenticated",
    "updated_at": "2020-09-22T10:28:02.238854Z",
    "user_metadata": Object {
      "hello": "world",
    },
  },
  "error": null,
}
`;

exports[`signIn() 1`] = `
Object {
  "data": Object {
    "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJhdXRoZW50aWNhdGVkIiwiZXhwIjoxNjAwNzc0MDgyLCJzdWIiOiJlMDJkNzhhOS1lOWE2LTQzYzktYjcwNy02ODFiZTg1ZmE0YjciLCJlbWFpbCI6Ik1ja2VubmE4QGhvdG1haWwuY29tIiwiYXBwX21ldGFkYXRhIjp7InByb3ZpZGVyIjoiZW1haWwifSwidXNlcl9tZXRhZGF0YSI6e30sInJvbGUiOiJhdXRoZW50aWNhdGVkIn0.vH2AXDRH_le8JuEJq4EcvbrTVubOdKytjpKopGD3mLg",
    "expires_in": 3600,
    "refresh_token": "a7Q1k0p1u8dEWQp4AkLu_w",
    "token_type": "bearer",
    "user": Object {
      "app_metadata": Object {
        "provider": "email",
      },
      "aud": "authenticated",
      "confirmed_at": "2020-09-22T10:28:01.860349Z",
      "created_at": "2020-09-22T10:28:01.8576Z",
      "email": "Mckenna8@hotmail.com",
      "id": "e02d78a9-e9a6-43c9-b707-681be85fa4b7",
      "last_sign_in_at": "2020-09-22T10:28:02.026898381Z",
      "role": "authenticated",
      "updated_at": "2020-09-22T10:28:01.857605Z",
      "user_metadata": Object {},
    },
  },
  "error": null,
}
`;

exports[`signOut 1`] = `true`;

exports[`signUp() 1`] = `
Object {
  "data": Object {
    "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJhdXRoZW50aWNhdGVkIiwiZXhwIjoxNjAwNzc0MDgxLCJzdWIiOiJlMDJkNzhhOS1lOWE2LTQzYzktYjcwNy02ODFiZTg1ZmE0YjciLCJlbWFpbCI6Ik1ja2VubmE4QGhvdG1haWwuY29tIiwiYXBwX21ldGFkYXRhIjp7InByb3ZpZGVyIjoiZW1haWwifSwidXNlcl9tZXRhZGF0YSI6bnVsbCwicm9sZSI6ImF1dGhlbnRpY2F0ZWQifQ.uBqsWLP-1p3BCNSCSPCpglWDved_CX7Tm8LLhMHsiNM",
    "expires_in": 3600,
    "refresh_token": "3mT6hOJiNX8nOQ8miD0s2A",
    "token_type": "bearer",
    "user": Object {
      "app_metadata": Object {
        "provider": "email",
      },
      "aud": "authenticated",
      "confirmed_at": "2020-09-22T10:28:01.860348919Z",
      "created_at": "2020-09-22T10:28:01.8576Z",
      "email": "Mckenna8@hotmail.com",
      "id": "e02d78a9-e9a6-43c9-b707-681be85fa4b7",
      "last_sign_in_at": "2020-09-22T10:28:01.865578044Z",
      "role": "authenticated",
      "updated_at": "2020-09-22T10:28:01.86048Z",
      "user_metadata": null,
    },
  },
  "error": null,
}
`;
